--- a/fonction.ipynb
+++ b/fonction.ipynb
@@ -75,7 +75,7 @@
    "source": [
     "shapefile_path_vege = 'data/project/FORMATION_VEGETALE.shp'\n",
     "shapefile_path_emprise = 'data/project/emprise_etude.shp'\n",
-    "output_path = 'vege.shp'\n",
+    "output_path = 'Sample_BD_foret_T31TCJ.shp'\n",
     "code_vege(shapefile_path_vege,shapefile_path_emprise,output_path)"
    ]
   },
@@ -183,7 +183,7 @@
     "                   'float32': gdal.GDT_Float32,\n",
     "                   'float64': gdal.GDT_Float64}\n",
     "input_image = 'raster.tif'\n",
-    "output_masque = 'masque.tif'\n",
+    "output_masque = 'masque_foret.tif'\n",
     "masque(input_image,output_masque)"
    ]
   },
