--- a/fonction.ipynb
+++ b/fonction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f086d31e-7470-4edb-ba0f-eb038d4a8a27",
    "metadata": {},
    "outputs": [],
@@ -60,34 +60,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f7db51d0-1043-4549-beb1-87c3fea26c28",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR 1: PROJ: proj_create_from_database: Open of /opt/conda/share/proj failed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "shapefile_path_vege = 'data/project/FORMATION_VEGETALE.shp'\n",
-    "shapefile_path_emprise = 'data/project/emprise_etude.shp'\n",
+    "shapefile_path_vege = '../data/project/FORMATION_VEGETALE.shp'\n",
+    "shapefile_path_emprise = '../data/project/emprise_etude.shp'\n",
     "output_path = 'Sample_BD_foret_T31TCJ.shp'\n",
     "code_vege(shapefile_path_vege,shapefile_path_emprise,output_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "92ea3d5d-fe5d-4781-aefa-697e63ff4a9e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('libsigma/')\n",
+    "sys.path.append('../libsigma/')\n",
     "import os\n",
     "import read_and_write as rw\n",
     "def rasterize(in_vector,out_image,field_name,sptial_resolution):\n",
@@ -110,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "b726bf90-55c6-4fa3-a695-9fc07a8f3839",
    "metadata": {},
    "outputs": [
@@ -118,28 +110,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gdal_rasterize -a code -tr 10.0 10.0 -ot Byte -of GTiff -a_nodata 0 vege.shp raster.tif\n",
-      "0"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR 1: PROJ: proj_identify: Open of /opt/conda/share/proj failed\n",
-      "ERROR 1: PROJ: proj_create_from_name: Open of /opt/conda/share/proj failed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "...10...20...30...40...50...60...70...80...90...100 - done.\n"
+      "gdal_rasterize -a code -tr 10.0 10.0 -ot Byte -of GTiff -a_nodata 0 Sample_BD_foret_T31TCJ.shp raster.tif\n",
+      "0...10...20...30...40...50...60...70...80...90...100 - done.\n"
      ]
     }
    ],
    "source": [
-    "in_vector = 'vege.shp'\n",
+    "in_vector = 'Sample_BD_foret_T31TCJ.shp'\n",
     "out_image = 'raster.tif'\n",
     "field_name = 'code'\n",
     "sptial_resolution = 10.0\n",
@@ -148,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "a48109fb-5eb3-46ff-8e45-884fd6621971",
    "metadata": {},
    "outputs": [],
@@ -169,10 +146,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "48a84be8-bb24-40ec-a619-4edd17883ac2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.12/site-packages/osgeo/gdal.py:312: FutureWarning: Neither gdal.UseExceptions() nor gdal.DontUseExceptions() has been explicitly called. In GDAL 4.0, exceptions will be enabled by default.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from osgeo import gdal\n",
     "data_type_match = {'uint8': gdal.GDT_Byte,\n",
@@ -198,7 +184,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
