--- a/fonction.ipynb
+++ b/fonction.ipynb
@@ -230,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def decoupe(releves,bands,emprise,output_img):\n",
+    "def preparation(releves,bands,emprise,output_img):\n",
     "    suffixe = '.tif'\n",
     "    img_all_band = []\n",
     "    gdf = gpd.read_file(emprise)\n",
@@ -274,7 +274,7 @@
     "releves = ['B_20220326-105856-076_L2A_T31TCJ_C_V3-0_FRE_B','B_20220405-105855-542_L2A_T31TCJ_C_V3-0_FRE_B','B_20220803-105903-336_L2A_T31TCJ_C_V3-0_FRE_B','B_20221111-105858-090_L2A_T31TCJ_C_V3-1_FRE_B','A_20221116-105900-865_L2A_T31TCJ_C_V3-1_FRE_B','B_20230209-105857-157_L2A_T31TCJ_C_V3-1_FRE_B']\n",
     "output_img = 'Serie_temp_S2_allbands.tif'\n",
     "\n",
-    "decoupe(releves,bands,emprise,output_img)"
+    "preparation(releves,bands,emprise,output_img)"
    ]
   }
  ],
