reorganisation et ajout du fichier pre_traitement

--- a/fonctions_pretraitements.ipynb
+++ b/fonctions_pretraitements.ipynb
@@ -853,6 +853,106 @@
     "pixels_per_polygons_per_class(raster_path, shapefile_path, output_path)\n",
     "print(\"Diagramme en violon créé et enregistré avec succès !\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45047767",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_115046/3590223530.py:66: RuntimeWarning: invalid value encountered in divide\n",
+      "  ndvi = (ir - r) / (ir + r)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NDVI image saved to /home/onyxia/work/projet_teledec_2024/Serie_temp_S2_ndvi.tif\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "from osgeo import gdal\n",
+    "\n",
+    "data_type_match = {'uint8': gdal.GDT_Byte,\n",
+    "                   'uint16': gdal.GDT_UInt16,\n",
+    "                   'uint32': gdal.GDT_UInt32,\n",
+    "                   'int16': gdal.GDT_Int16,\n",
+    "                   'int32': gdal.GDT_Int32,\n",
+    "                   'float32': gdal.GDT_Float32,\n",
+    "                   'float64': gdal.GDT_Float64}\n",
+    "\n",
+    "# Function to load image as array\n",
+    "def load_img_as_array(filename):\n",
+    "    dataset = gdal.Open(filename)\n",
+    "    if not dataset:\n",
+    "        raise FileNotFoundError(f\"Cannot open {filename}\")\n",
+    "    return dataset.ReadAsArray(), dataset\n",
+    "\n",
+    "# Function to write image\n",
+    "def write_image(output_filename, array, reference_ds, gdal_dtype):\n",
+    "    driver = gdal.GetDriverByName('GTiff')\n",
+    "    out_ds = driver.Create(\n",
+    "        output_filename,\n",
+    "        reference_ds.RasterXSize,\n",
+    "        reference_ds.RasterYSize,\n",
+    "        array.shape[0],  # Number of bands\n",
+    "        gdal_dtype\n",
+    "    )\n",
+    "    out_ds.SetGeoTransform(reference_ds.GetGeoTransform())\n",
+    "    out_ds.SetProjection(reference_ds.GetProjection())\n",
+    "\n",
+    "    for i in range(array.shape[0]):\n",
+    "        out_ds.GetRasterBand(i + 1).WriteArray(array[i])\n",
+    "\n",
+    "    out_ds.FlushCache()\n",
+    "    out_ds = None\n",
+    "\n",
+    "# Define parameters\n",
+    "dirname = '/home/onyxia/work/images'\n",
+    "out_dirname = '/home/onyxia/work/projet_teledec_2024'\n",
+    "filename = os.path.join(dirname, 'Serie_temp_S2_allbands.tif')\n",
+    "out_ndvi_filename = os.path.join(out_dirname, 'Serie_temp_S2_ndvi.tif')\n",
+    "\n",
+    "# Load data\n",
+    "data, data_set = load_img_as_array(filename)\n",
+    "\n",
+    "# Determine NDVI bands (B4 for red and B8 for NIR)\n",
+    "num_dates = 6\n",
+    "bands_per_date = 10\n",
+    "\n",
+    "def calculate_band_index(date_index, band_position):\n",
+    "    band_index = date_index * bands_per_date + band_position\n",
+    "    if band_index >= data.shape[0]:\n",
+    "        raise ValueError(f\"Band index {band_index} exceeds the number of available bands ({data.shape[0]}).\")\n",
+    "    return band_index\n",
+    "\n",
+    "red_band_indices = [calculate_band_index(i, 2) for i in range(num_dates)]  # B4 (band index 2)\n",
+    "nir_band_indices = [calculate_band_index(i, 6) for i in range(num_dates)]  # B8 (band index 6)\n",
+    "\n",
+    "# Compute NDVI for each date\n",
+    "ndvi_stack = []\n",
+    "for i in range(num_dates):\n",
+    "    r = data[red_band_indices[i], :, :].astype('float32')\n",
+    "    ir = data[nir_band_indices[i], :, :].astype('float32')\n",
+    "    ndvi = (ir - r) / (ir + r)\n",
+    "    ndvi = np.nan_to_num(ndvi, nan=-9999)  # Replace NaN values with -9999 for nodata handling\n",
+    "    ndvi_stack.append(ndvi)\n",
+    "\n",
+    "ndvi_stack = np.array(ndvi_stack)\n",
+    "\n",
+    "# Write the NDVI stack to output file\n",
+    "write_image(out_ndvi_filename, ndvi_stack, reference_ds=data_set, gdal_dtype=data_type_match['float32'])\n",
+    "\n",
+    "print(f\"NDVI image saved to {out_ndvi_filename}\")"
+   ]
   }
  ],
  "metadata": {
