--- a/fonctions_pretraitements.ipynb
+++ b/fonctions_pretraitements.ipynb
@@ -814,6 +814,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "3e1febc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('../libsigma/')\n",
+    "import read_and_write as rw\n",
+    "import numpy as np\n",
+    "import geopandas as gpd\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def pixels_per_polygons_per_class(raster_path, shapefile_path, output_path) :\n",
+    "\n",
+    "    # Chargement du raster\n",
+    "    data_set = rw.open_image(raster_path)\n",
+    "    img = rw.load_img_as_array(raster_path)\n",
+    "\n",
+    "    # Chargement du shapefile\n",
+    "    shapefile = gpd.read_file(shapefile_path)\n",
+    "    allowed_codes = [11, 12, 13, 14, 21, 22, 23, 24, 25]\n",
+    "    shapefile[\"code\"] = shapefile[\"code\"].astype(int)\n",
+    "    shapefile = shapefile[shapefile[\"code\"].isin(allowed_codes)]\n",
+    "    shapefile[\"unique_id\"] = range(1, len(shapefile) + 1)\n",
+    "    output_shp = 'test_poly.shp'\n",
+    "    shapefile.to_file(output_shp)\n",
+    "    field = \"unique_id\"\n",
+    "    output_poly = 'test_poly.tif'\n",
+    "    resolution = 10\n",
+    "    emprise = 'data/project/emprise.tif'\n",
+    "    type_data = 'Uint16'\n",
+    "    rasterize(output_shp,output_poly,field,resolution,emprise,type_data)\n",
+    "    arr = rw.load_img_as_array(output_poly)\n",
+    "    counts = np.bincount(arr.flatten())\n",
+    "\n",
+    "\n",
+    "    # Ajout de l'information \"nombre_pixels\" au GeoDataFrame\n",
+    "    shapefile[\"nombre_pixels\"] = shapefile[\"unique_id\"].apply(lambda x: counts[x] if x < len(counts) else 0)\n",
+    "\n",
+    "    # Calcul des statistiques par classe \"nom\"\n",
+    "    resume = shapefile.groupby(\"nom\").agg(\n",
+    "        total_polygones=(\"geometry\", \"count\"),\n",
+    "        total_pixels=(\"nombre_pixels\", \"sum\"),\n",
+    "        moyenne_pixels_par_polygone=(\"nombre_pixels\", \"mean\")\n",
+    "    ).reset_index()\n",
+    "\n",
+    "    # Préparation des données pour le diagramme en violon\n",
+    "    unique_noms = shapefile[\"nom\"].unique()\n",
+    "    data_for_violin = [shapefile.loc[shapefile[\"nom\"] == n, \"nombre_pixels\"].values for n in unique_noms]\n",
+    "\n",
+    "    # Création du diagramme en violon avec matplotlib\n",
+    "    fig, ax = plt.subplots(figsize=(14, 8))\n",
+    "    parts = ax.violinplot(data_for_violin, showmeans=True, showmedians=True, showextrema=True)\n",
+    "\n",
+    "    ax.set_yscale(\"log\")\n",
+    "    ax.set_title(\"Distribution du nombre de pixels par polygone pour chaque essence d'arbres\")\n",
+    "    ax.set_xlabel(\"Essences d'arbres\")\n",
+    "    ax.set_ylabel(\"Nombre de pixels par polygone (Échelle logarithmique)\")\n",
+    "\n",
+    "    # Ajustement des labels de l'axe X\n",
+    "    ax.set_xticks(np.arange(1, len(unique_noms) + 1))\n",
+    "    ax.set_xticklabels(unique_noms, rotation=45, ha='right')\n",
+    "\n",
+    "    # Personnalisation du style des violons\n",
+    "    for pc in parts['bodies']:\n",
+    "        pc.set_facecolor('skyblue')   # Couleur de remplissage\n",
+    "        pc.set_edgecolor('black')     # Couleur du contour\n",
+    "        pc.set_alpha(0.7)             # Transparence\n",
+    "\n",
+    "    # Personnalisation des lignes (médianes, moyennes, barres)\n",
+    "    for line_type in ['cmeans', 'cmedians', 'cbars', 'cmins', 'cmaxes']:\n",
+    "        if line_type in parts:\n",
+    "            lc = parts[line_type]\n",
+    "            lc.set_linewidth(0.5)         # plus fin\n",
+    "            lc.set_linestyle('--')         # pointillé\n",
+    "            lc.set_color('black')         # couleur noire\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(output_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "id": "e63be566",
    "metadata": {},
@@ -952,6 +1036,101 @@
     "write_image(out_ndvi_filename, ndvi_stack, reference_ds=data_set, gdal_dtype=data_type_match['float32'])\n",
     "\n",
     "print(f\"NDVI image saved to {out_ndvi_filename}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1c80c33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shapefile_path = 'Sample_BD_foret_T31TCJ.shp'\n",
+    "shapefile = gpd.read_file(shapefile_path)\n",
+    "\n",
+    "# Filte du shapefile\n",
+    "allowed_codes = [11, 12, 13, 14, 21, 22, 23, 24, 25]\n",
+    "shapefile[\"code\"] = shapefile[\"code\"].astype(int)\n",
+    "shapefile = shapefile[shapefile[\"code\"].isin(allowed_codes)]\n",
+    "output_shp = 'test_poly2.shp'\n",
+    "shapefile.to_file(output_shp)\n",
+    "field = \"code\"\n",
+    "output_poly = 'test_poly2.tif'\n",
+    "resolution = 10\n",
+    "emprise = 'data/project/emprise.tif'\n",
+    "type_data = 'Byte'\n",
+    "rasterize(output_shp,output_poly,field,resolution,emprise,type_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f28e498f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('libsigma/')\n",
+    "\n",
+    "import os\n",
+    "import numpy as np\n",
+    "from sklearn.metrics import confusion_matrix, classification_report, \\\n",
+    "    accuracy_score\n",
+    "from sklearn.ensemble import RandomForestClassifier as RF\n",
+    "\n",
+    "# personal librairies\n",
+    "import classification as cla\n",
+    "import read_and_write as rw\n",
+    "import plots\n",
+    "\n",
+    "# 1 --- define parameters\n",
+    "# inputs\n",
+    "sample_filename = 'test_poly2.tif'\n",
+    "image_filename = 'Serie_temp_S2_allbands2.tif'\n",
+    "# outputs\n",
+    "out_classif = 'ma_classif.tif'\n",
+    "out_matrix = 'ma_matrice.png'\n",
+    "out_qualite = 'mes_qualites.png'\n",
+    "\n",
+    "# 2 --- extract samples\n",
+    "X, Y, t = cla.get_samples_from_roi(image_filename, sample_filename)\n",
+    "\n",
+    "# 3 --- Train\n",
+    "clf = RF(max_depth=50,oob_score=True,max_samples=0.75,class_weight=\"balanced\")\n",
+    "clf.fit(X, Y)\n",
+    "\n",
+    "# 4 --- Test\n",
+    "Y_predict = clf.predict(X)\n",
+    "\n",
+    "# compute quality\n",
+    "cm = confusion_matrix(Y, Y_predict)\n",
+    "report = classification_report(Y, Y_predict, labels=np.unique(Y),\n",
+    "                               output_dict=True)\n",
+    "accuracy = accuracy_score(Y, Y_predict)\n",
+    "\n",
+    "# display and save quality\n",
+    "plots.plot_cm(cm, np.unique(Y), out_filename=out_matrix)\n",
+    "plots.plot_class_quality(report, accuracy, out_filename=out_qualite)\n",
+    "\n",
+    "# 5 --- apply on the whole image\n",
+    "# load image\n",
+    "X_img, _, t_img = cla.get_samples_from_roi(image_filename, image_filename)\n",
+    "\n",
+    "# predict image\n",
+    "Y_predict = clf.predict(X_img)\n",
+    "\n",
+    "# reshape\n",
+    "ds = rw.open_image(image_filename)\n",
+    "nb_row, nb_col, _ = rw.get_image_dimension(ds)\n",
+    "\n",
+    "img = np.zeros((nb_row, nb_col, 1), dtype='uint8')\n",
+    "img[t_img[0], t_img[1], 0] = Y_predict\n",
+    "\n",
+    "# write image\n",
+    "ds = rw.open_image(image_filename)\n",
+    "rw.write_image(out_classif, img, data_set=ds, gdal_dtype=None,\n",
+    "            transform=None, projection=None, driver_name=None,\n",
+    "            nb_col=None, nb_ligne=None, nb_band=1)"
    ]
   }
  ],
