--- a/fonctions_pretraitements.ipynb
+++ b/fonctions_pretraitements.ipynb
@@ -1045,7 +1045,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shapefile_path = 'Sample_BD_foret_T31TCJ.shp'\n",
+    "shapefile_path = \"/home/onyxia/work/projet_teledec_2024/Sample_BD_foret_T31TCJ.shp\"\n",
     "shapefile = gpd.read_file(shapefile_path)\n",
     "\n",
     "# Filte du shapefile\n",
@@ -1070,7 +1070,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('libsigma/')\n",
+    "sys.path.append('../libsigma/')\n",
     "\n",
     "import os\n",
     "import numpy as np\n",
