--- a/fonctions_pretraitements.ipynb
+++ b/fonctions_pretraitements.ipynb
@@ -1046,6 +1046,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5e2ccd46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def report_from_dict_to_df(dict_report):\n",
+    "\n",
+    "\n",
+    "    # convert report into dataframe\n",
+    "    report_df = pd.DataFrame.from_dict(dict_report)\n",
+    "\n",
+    "    # drop unnecessary rows and columns\n",
+    "    try :\n",
+    "        report_df = report_df.drop(['accuracy', 'macro avg', 'weighted avg'], axis=1)\n",
+    "    except KeyError:\n",
+    "        print(dict_report)\n",
+    "        report_df = report_df.drop(['micro avg', 'macro avg', 'weighted avg'], axis=1)\n",
+    "\n",
+    "    report_df = report_df.drop(['support'], axis=0)\n",
+    "\n",
+    "    return report_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f28e498f",
    "metadata": {},
    "outputs": [],
@@ -1055,9 +1080,13 @@
     "\n",
     "import os\n",
     "import numpy as np\n",
+    "from sklearn.ensemble import RandomForestClassifier as RF\n",
+    "from sklearn.model_selection import train_test_split, KFold, StratifiedKFold, GroupKFold, StratifiedGroupKFold\n",
     "from sklearn.metrics import confusion_matrix, classification_report, \\\n",
     "    accuracy_score\n",
-    "from sklearn.ensemble import RandomForestClassifier as RF\n",
+    "import geopandas as gpd\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "# personal librairies\n",
     "import classification as cla\n",
@@ -1066,52 +1095,124 @@
     "\n",
     "# 1 --- define parameters\n",
     "# inputs\n",
-    "sample_filename = 'test_poly2.tif'\n",
-    "image_filename = 'Serie_temp_S2_allbands2.tif'\n",
+    "shapefile_path = '/home/onyxia/work/projet_teledec_2024/results/data/sample/Sample_BD_foret_T31TCJ.shp'\n",
+    "shapefile = gpd.read_file(shapefile_path)\n",
+    "allowed_codes = [11, 12, 13, 14, 21, 22, 23, 24, 25]\n",
+    "shapefile[\"code\"] = shapefile[\"code\"].astype(int)\n",
+    "shapefile = shapefile[shapefile[\"code\"].isin(allowed_codes)]\n",
+    "output_shp = '/home/onyxia/work/projet_teledec_2024/results/data/sample/Sample_BD_foret_T31TCJ_id.shp'\n",
+    "shapefile.to_file(output_shp)\n",
+    "\n",
+    "out_image = '/home/onyxia/work/projet_teledec_2024/results/data/img_pretraitees/Sample_BD_foret_T31TCJ_id.tif'\n",
+    "field_name = 'code'\n",
+    "emprise = '/home/onyxia/work/projet_teledec_2024/results/data/img_pretraitees/emprise.tif'\n",
+    "type_data = 'Byte'\n",
+    "rasterize(output_shp,out_image,field_name,10,emprise,type_data)\n",
+    "\n",
+    "sample_filename = '/home/onyxia/work/projet_teledec_2024/results/data/sample/Sample_BD_foret_T31TCJ_classif.tif'\n",
+    "image_filename = '/home/onyxia/work/data/images/Serie_temp_S2_allbands.tif'\n",
+    "id_filename = '/home/onyxia/work/projet_teledec_2024/results/data/img_pretraitees/forest_id.tif'\n",
+    "\n",
+    "# Sample parameters\n",
+    "#test_size = 0.7\n",
+    "nb_iter = 2\n",
+    "nb_folds = 5\n",
+    "\n",
     "# outputs\n",
-    "out_classif = 'ma_classif.tif'\n",
-    "out_matrix = 'ma_matrice.png'\n",
-    "out_qualite = 'mes_qualites.png'\n",
+    "suffix = '_CV{}folds_stratified_group_x{}times'.format(nb_folds, nb_iter)\n",
+    "out_folder = '/home/onyxia/work/results/'\n",
+    "out_classif = os.path.join(out_folder, 'ma_classif{}.tif'.format(suffix))\n",
+    "out_matrix = os.path.join(out_folder, 'ma_matrice{}.png'.format(suffix))\n",
+    "out_qualite = os.path.join(out_folder, 'mes_qualites{}.png'.format(suffix))\n",
     "\n",
-    "# 2 --- extract samples\n",
+    "\n",
     "X, Y, t = cla.get_samples_from_roi(image_filename, sample_filename)\n",
+    "_, groups, _ = cla.get_samples_from_roi(image_filename, id_filename)\n",
     "\n",
-    "# 3 --- Train\n",
-    "clf = RF(max_depth=50,oob_score=True,max_samples=0.75,class_weight=\"balanced\")\n",
-    "clf.fit(X, Y)\n",
+    "list_cm = []\n",
+    "list_accuracy = []\n",
+    "list_report = []\n",
+    "groups = np.squeeze(groups)\n",
     "\n",
-    "# 4 --- Test\n",
-    "Y_predict = clf.predict(X)\n",
+    "# Iter on stratified K fold\n",
+    "for _ in range(nb_iter):\n",
+    "  kf = StratifiedGroupKFold(n_splits=nb_folds, shuffle=True)\n",
+    "  for train, test in kf.split(X, Y, groups=groups):\n",
+    "      X_train, X_test = X[train], X[test]\n",
+    "      Y_train, Y_test = Y[train], Y[test]\n",
     "\n",
-    "# compute quality\n",
-    "cm = confusion_matrix(Y, Y_predict)\n",
-    "report = classification_report(Y, Y_predict, labels=np.unique(Y),\n",
-    "                               output_dict=True)\n",
-    "accuracy = accuracy_score(Y, Y_predict)\n",
+    "      # 3 --- Train\n",
+    "      #clf = SVC(cache_size=6000)\n",
+    "      clf = RF(max_depth=50,oob_score=True,max_samples=0.75,class_weight='balanced')\n",
+    "      clf.fit(X_train, Y_train)\n",
     "\n",
-    "# display and save quality\n",
-    "plots.plot_cm(cm, np.unique(Y), out_filename=out_matrix)\n",
-    "plots.plot_class_quality(report, accuracy, out_filename=out_qualite)\n",
+    "      # 4 --- Test\n",
+    "      Y_predict = clf.predict(X_test)\n",
     "\n",
-    "# 5 --- apply on the whole image\n",
-    "# load image\n",
-    "X_img, _, t_img = cla.get_samples_from_roi(image_filename, image_filename)\n",
+    "      # compute quality\n",
+    "      list_cm.append(confusion_matrix(Y_test, Y_predict))\n",
+    "      list_accuracy.append(accuracy_score(Y_test, Y_predict))\n",
+    "      report = classification_report(Y_test, Y_predict,\n",
+    "                                     labels=np.unique(Y_predict),\n",
+    "                                     output_dict=True)\n",
     "\n",
-    "# predict image\n",
-    "Y_predict = clf.predict(X_img)\n",
+    "      # store them\n",
+    "      list_report.append(report_from_dict_to_df(report))\n",
     "\n",
-    "# reshape\n",
-    "ds = rw.open_image(image_filename)\n",
-    "nb_row, nb_col, _ = rw.get_image_dimension(ds)\n",
+    "# compute mean of cm\n",
+    "array_cm = np.array(list_cm)\n",
+    "mean_cm = array_cm.mean(axis=0)\n",
     "\n",
-    "img = np.zeros((nb_row, nb_col, 1), dtype='uint8')\n",
-    "img[t_img[0], t_img[1], 0] = Y_predict\n",
+    "# compute mean and std of overall accuracy\n",
+    "array_accuracy = np.array(list_accuracy)\n",
+    "mean_accuracy = array_accuracy.mean()\n",
+    "std_accuracy = array_accuracy.std()\n",
     "\n",
-    "# write image\n",
-    "ds = rw.open_image(image_filename)\n",
-    "rw.write_image(out_classif, img, data_set=ds, gdal_dtype=None,\n",
-    "            transform=None, projection=None, driver_name=None,\n",
-    "            nb_col=None, nb_ligne=None, nb_band=1)"
+    "# compute mean and std of classification report\n",
+    "array_report = np.array(list_report)\n",
+    "mean_report = array_report.mean(axis=0)\n",
+    "std_report = array_report.std(axis=0)\n",
+    "a_report = list_report[0]\n",
+    "mean_df_report = pd.DataFrame(mean_report, index=a_report.index,\n",
+    "                              columns=a_report.columns)\n",
+    "std_df_report = pd.DataFrame(std_report, index=a_report.index,\n",
+    "                             columns=a_report.columns)\n",
+    "\n",
+    "# Display confusion matrix\n",
+    "plots.plot_cm(mean_cm, np.unique(Y_predict))\n",
+    "plt.savefig(out_matrix, bbox_inches='tight')\n",
+    "\n",
+    "# Display class metrics\n",
+    "fig, ax = plt.subplots(figsize=(10, 7))\n",
+    "ax = mean_df_report.T.plot.bar(ax=ax, yerr=std_df_report.T, zorder=2)\n",
+    "ax.set_ylim(0.5, 1)\n",
+    "_ = ax.text(1.5, 0.95, 'OA : {:.2f} +- {:.2f}'.format(mean_accuracy,\n",
+    "                                                      std_accuracy),\n",
+    "            fontsize=14)\n",
+    "ax.set_title('Class quality estimation')\n",
+    "\n",
+    "# custom : cuteness\n",
+    "# background color\n",
+    "ax.set_facecolor('ivory')\n",
+    "# labels\n",
+    "x_label = ax.get_xlabel()\n",
+    "ax.set_xlabel(x_label, fontdict={'fontname': 'Sawasdee'}, fontsize=14)\n",
+    "y_label = ax.get_ylabel()\n",
+    "ax.set_ylabel(y_label, fontdict={'fontname': 'Sawasdee'}, fontsize=14)\n",
+    "# borders\n",
+    "ax.spines[\"top\"].set_visible(False)\n",
+    "ax.spines[\"right\"].set_visible(False)\n",
+    "ax.spines[\"bottom\"].set_visible(False)\n",
+    "ax.spines[\"left\"].set_visible(False)\n",
+    "ax.tick_params(axis='x', colors='darkslategrey', labelsize=14)\n",
+    "ax.tick_params(axis='y', colors='darkslategrey', labelsize=14)\n",
+    "# grid\n",
+    "ax.minorticks_on()\n",
+    "ax.yaxis.grid(which='major', color='darkgoldenrod', linestyle='--',\n",
+    "              linewidth=0.5, zorder=1)\n",
+    "ax.yaxis.grid(which='minor', color='darkgoldenrod', linestyle='-.',\n",
+    "              linewidth=0.3, zorder=1)\n",
+    "plt.savefig(out_qualite, bbox_inches='tight')"
    ]
   }
  ],
