--- a/fonctions_pretraitements.ipynb
+++ b/fonctions_pretraitements.ipynb
@@ -1090,7 +1090,9 @@
     "import classification as cla\n",
     "import read_and_write as rw\n",
     "import plots\n",
+    "my_folder = '/home/mlang/Documents/Enseignement/cours/online/stable/data/td_M2_classif'\n",
     "\n",
+    "def classif(folder,dataframe,)\n",
     "# 1 --- define parameters\n",
     "# inputs\n",
     "\n",
@@ -1103,14 +1105,116 @@
     "filtered_gdf = filter_polygons_by_code(gdf, code_column, allowed_codes)\n",
     "filtered_gdf.to_file(output_shp)\n",
     "\n",
+    "out_image = '/home/onyxia/work/projet_teledec_2024/results/data/img_pretraitees/Sample_BD_foret_T31TCJ_classif.tif'\n",
     "field_name = 'code'\n",
     "emprise = '/home/onyxia/work/projet_teledec_2024/results/data/img_pretraitees/emprise.tif'\n",
     "type_data = 'Byte'\n",
-    "out_sample_image = '/home/onyxia/work/projet_teledec_2024/results/data/img_pretraitees/Sample_BD_foret_T31TCJ_classif.tif'\n",
     "rasterize(output_shp,out_image,field_name,10,emprise,type_data)\n",
     "\n",
+    "sample_filename = '/home/onyxia/work/projet_teledec_2024/results/data/sample/Sample_BD_foret_T31TCJ_classif.tif'\n",
     "image_filename = '/home/onyxia/work/data/images/Serie_temp_S2_allbands.tif'\n",
-    "id_filename = '/home/onyxia/work/projet_teledec_2024/results/data/img_pretraitees/forest_id.tif'\n"
+    "id_filename = '/home/onyxia/work/projet_teledec_2024/results/data/img_pretraitees/forest_id.tif'\n",
+    "\n",
+    "# Sample parameters\n",
+    "#test_size = 0.7\n",
+    "nb_iter = 2\n",
+    "nb_folds = 5\n",
+    "\n",
+    "# outputs\n",
+    "suffix = '_CV{}folds_stratified_group_x{}times'.format(nb_folds, nb_iter)\n",
+    "out_folder = '/home/onyxia/work/results/'\n",
+    "out_classif = os.path.join(out_folder, 'ma_classif{}.tif'.format(suffix))\n",
+    "out_matrix = os.path.join(out_folder, 'ma_matrice{}.png'.format(suffix))\n",
+    "out_qualite = os.path.join(out_folder, 'mes_qualites{}.png'.format(suffix))\n",
+    "\n",
+    "\n",
+    "X, Y, t = cla.get_samples_from_roi(image_filename, sample_filename)\n",
+    "_, groups, _ = cla.get_samples_from_roi(image_filename, id_filename)\n",
+    "\n",
+    "list_cm = []\n",
+    "list_accuracy = []\n",
+    "list_report = []\n",
+    "groups = np.squeeze(groups)\n",
+    "\n",
+    "# Iter on stratified K fold\n",
+    "for _ in range(nb_iter):\n",
+    "  kf = StratifiedGroupKFold(n_splits=nb_folds, shuffle=True)\n",
+    "  for train, test in kf.split(X, Y, groups=groups):\n",
+    "      X_train, X_test = X[train], X[test]\n",
+    "      Y_train, Y_test = Y[train], Y[test]\n",
+    "\n",
+    "      # 3 --- Train\n",
+    "      #clf = SVC(cache_size=6000)\n",
+    "      clf = RF(max_depth=50,oob_score=True,max_samples=0.75,class_weight='balanced')\n",
+    "      clf.fit(X_train, Y_train)\n",
+    "\n",
+    "      # 4 --- Test\n",
+    "      Y_predict = clf.predict(X_test)\n",
+    "\n",
+    "      # compute quality\n",
+    "      list_cm.append(confusion_matrix(Y_test, Y_predict))\n",
+    "      list_accuracy.append(accuracy_score(Y_test, Y_predict))\n",
+    "      report = classification_report(Y_test, Y_predict,\n",
+    "                                     labels=np.unique(Y_predict),\n",
+    "                                     output_dict=True)\n",
+    "\n",
+    "      # store them\n",
+    "      list_report.append(report_from_dict_to_df(report))\n",
+    "\n",
+    "# compute mean of cm\n",
+    "array_cm = np.array(list_cm)\n",
+    "mean_cm = array_cm.mean(axis=0)\n",
+    "\n",
+    "# compute mean and std of overall accuracy\n",
+    "array_accuracy = np.array(list_accuracy)\n",
+    "mean_accuracy = array_accuracy.mean()\n",
+    "std_accuracy = array_accuracy.std()\n",
+    "\n",
+    "# compute mean and std of classification report\n",
+    "array_report = np.array(list_report)\n",
+    "mean_report = array_report.mean(axis=0)\n",
+    "std_report = array_report.std(axis=0)\n",
+    "a_report = list_report[0]\n",
+    "mean_df_report = pd.DataFrame(mean_report, index=a_report.index,\n",
+    "                              columns=a_report.columns)\n",
+    "std_df_report = pd.DataFrame(std_report, index=a_report.index,\n",
+    "                             columns=a_report.columns)\n",
+    "\n",
+    "# Display confusion matrix\n",
+    "plots.plot_cm(mean_cm, np.unique(Y_predict))\n",
+    "plt.savefig(out_matrix, bbox_inches='tight')\n",
+    "\n",
+    "# Display class metrics\n",
+    "fig, ax = plt.subplots(figsize=(10, 7))\n",
+    "ax = mean_df_report.T.plot.bar(ax=ax, yerr=std_df_report.T, zorder=2)\n",
+    "ax.set_ylim(0.5, 1)\n",
+    "_ = ax.text(1.5, 0.95, 'OA : {:.2f} +- {:.2f}'.format(mean_accuracy,\n",
+    "                                                      std_accuracy),\n",
+    "            fontsize=14)\n",
+    "ax.set_title('Class quality estimation')\n",
+    "\n",
+    "# custom : cuteness\n",
+    "# background color\n",
+    "ax.set_facecolor('ivory')\n",
+    "# labels\n",
+    "x_label = ax.get_xlabel()\n",
+    "ax.set_xlabel(x_label, fontdict={'fontname': 'Sawasdee'}, fontsize=14)\n",
+    "y_label = ax.get_ylabel()\n",
+    "ax.set_ylabel(y_label, fontdict={'fontname': 'Sawasdee'}, fontsize=14)\n",
+    "# borders\n",
+    "ax.spines[\"top\"].set_visible(False)\n",
+    "ax.spines[\"right\"].set_visible(False)\n",
+    "ax.spines[\"bottom\"].set_visible(False)\n",
+    "ax.spines[\"left\"].set_visible(False)\n",
+    "ax.tick_params(axis='x', colors='darkslategrey', labelsize=14)\n",
+    "ax.tick_params(axis='y', colors='darkslategrey', labelsize=14)\n",
+    "# grid\n",
+    "ax.minorticks_on()\n",
+    "ax.yaxis.grid(which='major', color='darkgoldenrod', linestyle='--',\n",
+    "              linewidth=0.5, zorder=1)\n",
+    "ax.yaxis.grid(which='minor', color='darkgoldenrod', linestyle='-.',\n",
+    "              linewidth=0.3, zorder=1)\n",
+    "plt.savefig(out_qualite, bbox_inches='tight')"
    ]
   }
  ],
